--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href={{url_for('static', filename="images/favicon.ico")}}>
 
-	<title>Settings</title>
+	<title>Settings</title> <!-- title of the page -->
     </head>
 
     <body>
