--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -3,14 +3,14 @@
     <link rel="stylesheet" type="text/css" href={{url_for('static', filename="css/about-me.css")}} />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"> <!-- imports custom fonts from the google api -->
     <head >
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href={{url_for('static', filename="images/favicon.ico")}}>
 
 
-	    <title>About-Me</title>
+	    <title>About-Me</title> <!-- title of the page -->
         
     </head>
 
@@ -19,7 +19,7 @@
             <img class="img__img" src={{url_for('static', filename="images/swan_home.png")}} alt="">
             <a href="/"><div class="img__description_layer">
               <p class="img__description">Return Home</p>
-            </div></a>
+            </div></a> <!-- when clicked, sends the user to the home menu -->
         </div>
 
         <div class="text-wrapper">
@@ -54,7 +54,7 @@
                 primary purpose of the engine.
             </p>
 
-        </div>
+        </div> <!-- large chunk of text that describes my project and the scope of the project -->
 
 
 
